MWPW-192612-Hindi overlapping text fixes (#56)
* hindi overlapping text fixes

* removed extra space

* resolved review comment

---------

--- a/creativecloud/styles/doodlebug.css
+++ b/creativecloud/styles/doodlebug.css
@@ -646,3 +646,10 @@ TODO: Can use &[dir="rtl"] above also, & is supported by modern browsers, done t
     background-size: contain;
   }
 }
+
+:root[lang="hi"]:has(meta[name='theme'][content='doodlebug']) {
+    .aside .foreground.container .text [class*="heading-"],
+    h1 {
+        line-height: 116%;
+    }
+}
